Se quita clase Date para utilizarse Calendar (Nominas)